Tests Passed - Programa Base Completo

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <!-- Imagen de fondo-->
-    <img id="background" src="https://external-preview.redd.it/lrO9QICCD20h2L5_p03-DqW6Nq25ahd1Dg2gYxhRW1c.png?auto=webp&s=67d764468ca5faa45c4b9f09e7f0347b5bf73f98" alt="matrixBackground">
+    <img id="background" src="https://schooladvisor.my/admin/uploads/images/Newsbanners//9697/5ab49e8233b66.jpg" alt="matrixBackground">
     <!-- la pongo aqui para que se mantenga durante toda la webapp-->
 
     <!--Division con la pantalla de inicio-->
@@ -35,7 +35,7 @@
       </form>
 
       <!--Boton para comenzar y pasarme a la pantalla de menu-->
-      <button id="startButton" onclick="menu('root', 'menu')"type="button"> Comenzar </button> <br>
+      <button id="startButton" type="button"> Comenzar </button> <br>
 
     </div>
 
@@ -111,12 +111,16 @@
       <p id="sliderV"></p>
 
       <!--Boton para cifrar mensaje y mostrar resultado-->
-      <button id="enterInfo" onclick="getValues();" type="button" name="button"></button>
+      <button id="enterInfo" type="button" name="button"></button>
       <br>
 
       <!--Cuadro de texto deshabilitado para mostrar el resultado-->
       <input id="result" type="text" name="" value="Aquí se mostrará el resultado" class="textbox" disabled>
 
+      <!--Boton de regresar al menu-->
+      <button id="backToMenu"type="button" name="button">Regresar al menu</button>
+      <!--Boton de Salir-->
+      <button id="exit"type="button" name="button">Salir</button>
 
 
     </div>
