--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           <!--Imagen de tipo boton del candado abierto, representando codificar-->
           <a href="javascript:infoInput('menu', 'information'); javascript:cipherSelection(); javascript:sliderValue();">
           <!--Obtengo la imagen de mi PC-->
-          <img id="openLock" src="C:\Users\ilytr\Desktop\Laboratoria\Las Pitayas\Cifrado Cesar\unlocked.png" alt="openLock">
+          <img id="openLock" src="https://i.postimg.cc/k5KLCtpp/unlocked.png" alt="openLock">
           </a>
           <!--En la caption especifico que este boton es para cifrar-->
           <figcaption>Cifrar</figcaption>
@@ -70,7 +70,7 @@
           <!--Imagen de tipo boton del candado cerrado, representando decodificar-->
           <a href="javascript:infoInput('menu', 'information'); javascript:decipherSelection(); javascript:sliderValue();">
           <!--Obtengo la imagen de mi PC-->
-          <img id="closedLock" src="C:\Users\ilytr\Desktop\Laboratoria\Las Pitayas\Cifrado Cesar\locked.png" alt="closedLock">
+          <img id="closedLock" src="https://i.postimg.cc/RFmyZZrV/locked.png" alt="closedLock">
           </a>
           <!--En la caption especifico que este boton es para decifrar-->
           <figcaption>Decifrar</figcaption>
@@ -102,7 +102,7 @@
       <p>Ingresa el valor de desplazamiento.</p>
       <!--Slider para que el usuario decida el valor de desplazamiento de caracteres-->
       <div class="sliderContainer">
-        <input type="range" min="1" max="50" value="25" id="offset" class="slider">
+        <input type="range" min="0" max="50" value="25" id="offset" class="slider">
       </div>
 
 
