Hacker edition + Copy to clipboard

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 
       <!--Titulo de la pagina-->
       <h1>e n i g m a</h1>
-
+      <br>
       <!--Le pido doy la bienvenida al usuario y le pregunto que quiere hacer-->
       <p id="bienvenida"></p>
 
@@ -121,6 +121,9 @@
       <button id="backToMenu"type="button" name="button">Regresar al menu</button>
       <!--Boton de Salir-->
       <button id="exit"type="button" name="button">Salir</button>
+      <br>
+      <!--Boton de Copiar texto-->
+      <button id="copy" type="button" name="button">Copiar texto</button>
 
 
     </div>
